// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Component should match snapshot with change_admin notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       made you admin of a group
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <Link
      className="pri_btn"
      to="/group/11"
    >
      View group
    </Link>
  </div>
</div>
`;

exports[`Notification Component should match snapshot with follow notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       started following you
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <a
      className="pri_btn follow"
      href="#"
      onClick={[Function]}
    >
      Follow
    </a>
  </div>
</div>
`;

exports[`Notification Component should match snapshot with like notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       liked your post
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <Link
      className="pri_btn"
      to="/post/8"
    >
      Open post
    </Link>
  </div>
</div>
`;

exports[`Notification Component should match snapshot with mention_post notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       mentioned you in a post
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <Link
      className="pri_btn"
      to="/post/8"
    >
      Open post
    </Link>
  </div>
</div>
`;

exports[`Notification Component should match snapshot with recommend notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       recommended coldplay to you
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <Link
      className="pri_btn"
      to="/profile/coldplay"
    >
      View coldplay
    </Link>
  </div>
</div>
`;

exports[`Notification Component should match snapshot with tag notification 1`] = `
<div
  className="noti follow_noti"
>
  <img
    className="noti_avatar"
    src="/users/7/avatar.jpg"
  />
  <div
    className="noti_left"
  >
    <Link
      className="noti_bold noti_username"
      to="/profile/ghalib"
    >
      ghalib
    </Link>
    <span>
       tagged you in a post
    </span>
    <span
      className="noti_time"
    >
      a month ago
    </span>
  </div>
  <div
    className="noti_right follow_noti_right"
  >
    <Link
      className="pri_btn"
      to="/post/23"
    >
      Open post
    </Link>
  </div>
</div>
`;
